--- a/index.html
+++ b/index.html
@@ -21,30 +21,68 @@
     </section>
     <section class="profile-section">
       <div class="team">
-        <img src="assets/images/photo1.png" alt="bill-mahoney">
-        <h4 class="name">Bill Mahoney</h4>
+        <div class="img-container">
+          <img src="assets/images/photo1.png" alt="bill-mahoney">
+        </div>
+        <div class="team-title">
+          <h4>Product owner</h4>
+        </div>
+        <p class="name">Bill Mahoney</p>
       </div>
+
       <div class="team team-down">
-        <img src="assets/images/photo2.png" alt="saba caprera">
-        <h4 class="name">Saba Caprera</h4>
+        <div class="img-container">
+          <img src="assets/images/photo2.png" alt="saba caprera">
+        </div>
+        <div class="team-title">
+          <h4>Art director</h4>
+        </div>
+        <p class="name">Saba Caprera</p>
       </div>
+
       <div class="team">
-        <img src="assets/images/photo3.png" alt="shae le">
-        <h4 class="name">Shae Le</h4>
+        <div class="img-container">
+          <img src="assets/images/photo3.png" alt="shae le">
+        </div>
+        <div class="team-title">
+          <h4>Tech Lead</h4>
+        </div>
+        <p class="name">Shae Le</p>
       </div>
+
       <div class="team">
-        <img src="assets/images/photo4.png" alt="skylah lu">
-        <h4 class="name">Skylah Lu</h4>
+        <div class="img-container">
+          <img src="assets/images/photo4.png" alt="skylah lu">
+        </div>
+        <div class="team-title">
+          <h4>UX developer</h4>
+        </div>
+        <p class="name">Skylah Lu</p>
       </div>
+
       <div class="team team-down">
-        <img src="assets/images/photo5.png" alt="griff richards">
-        <h4 class="name">Griff Rechards</h4>
+        <div class="img-container">
+          <img src="assets/images/photo5.png" alt="griff richards">
+        </div>
+        <div class="team-title">
+          <h4>Developer</h4>
+        </div>
+        <p class="name">Griff Rechards</p>
       </div>
+
       <div class="team">
-        <img src="assets/images/photo6.png" alt="stan john">
-        <h4 class="name">Stan John</h4>
+        <div class="img-container">
+          <img src="assets/images/photo6.png" alt="stan john">
+        </div>
+        <div class="team-title">
+          <h4>Developer</h4>
+        </div>
+        <p class="name">Stan John</p>
       </div>
     </section>
   </main>
+  <footer class="footer">
+    <p>Created by: Profsain Husseini Mudi devchallenges.io</p>
+  </footer>
 </body>
 </html>
